--- a/client/login_styles.css
+++ b/client/login_styles.css
@@ -1,3 +1,190 @@
-p {
-  color: blue;
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,800');
+
+*{
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    text-decoration: none;
+}
+.full-screen {
+    background-color: white;
+    color: black;
+}
+.hero {
+    display: flex;
+    flex-direction: row;
+    height: 100vh;
+}
+.container-left {
+    background: rgb(127,160,176);
+    background: linear-gradient(0deg, rgba(127,160,176,1) 0%, rgba(53,58,95,1) 100%);
+    padding-top: 10px;
+    width: 60%;
+}
+
+.description {
+    text-align: center;
+    font-family: 'Montserrat', sans-serif;
+    color: white;
+
+}
+.bottom{
+    text-align: center;
+    color: cornsilk;
+    font-size: 40px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    margin-top: 6px;
+}
+
+.revenue-file {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    height: 490px;
+}
+
+.container-right {
+    background-color: white;
+    width: 50%;
+    font-family: 'Montserrat', sans-serif;
+}
+.title {
+    margin-top: 45px;
+    font-family: 'Montserrat', sans-serif;
+    text-align: center;
+    color: #513E5C;
+}
+
+h1 {
+	font-weight: bold;
+	margin: 0;
+    font-size: 36px;
+    color: #513E5C;
+}
+
+span {
+	font-size: 18px;
+}
+
+a {
+	color: #333;
+	font-size: 14px;
+	text-decoration: none;
+	margin: 15px 0;
+}
+
+form {
+	background-color: #ffffff;
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+	padding: 0 50px;
+	height: 80%;
+	text-align: center;
+}
+
+.logo {
+    height: 260px;
+    width: 260px;
+}
+.input-holder {
+    width: 65%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+}
+
+input {
+	background-color: #e5e5e5;
+	border: none;
+    border-radius: 20px;
+	padding: 14px 15px;
+	margin: 9px 0;
+    font-size: 17px;
+    padding-left: 20px;
+    outline: none;
+    margin-top: 7px;
+    color: #513E5C;
+
+}
+
+.dropdown {
+    background-color: #e5e5e5;
+	border: none;
+    border-radius: 20px;
+	padding: 14px 15px;
+	margin: 9px 0;
+    font-size: 17px;
+    padding-left: 15px;
+    outline: none;
+    margin-top: 7px;
+    width: 65%;
+    color: #513E5C;
+}
+input:focus {
+    border: solid 2.5px #986c62;
+    
+}
+
+.login {
+	border-radius: 17px;
+	border: 1px solid #C4C4C4;
+	background-color: #C4C4C4;
+	color: black;
+	font-size: 18px;
+	font-weight: bold;
+	padding: 8px 25px;
+	letter-spacing: 3px;
+	text-transform: uppercase;
+	transition: transform 80ms ease-in;
+    margin-top: 5px;
+}
+
+.login:active {
+	transform: scale(0.95);
+    background-color: #513E5C;
+    color: white;
+}
+
+.login:focus {
+	outline: none;
+}
+
+.login:hover {
+    background-color: #513E5C;
+    color: white;
+}
+
+.button {
+    margin-top: 13px;
+    text-align: center;
+}
+.learn {
+    border-radius: 15px;
+	border: 1px solid #C4C4C4;
+	background-color: transparent;
+	color: white;
+	font-size: 15px;
+	font-weight: bold;
+	padding: 8px 18px;
+	letter-spacing: 1.5px;
+	text-transform: uppercase;
+	transition: transform 80ms ease-in;
+    text-align: center;
+}
+
+.learn:focus {
+    outline: none;
+}
+
+.learn:active {
+	transform: scale(0.95);
+    background-color: #513E5C;
+    color: white;
+}
+
+.learn:hover {
+    background-color: #c4c4c4;
+    color: white;
 }
