--- a/client/inventory/inventory_styles.css
+++ b/client/inventory/inventory_styles.css
@@ -1,194 +1,357 @@
+/* Google Font Link */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
-:root{
-    font-size: 16px;
-    font-family: poppins, Arial, Helvetica, sans-serif;
-    --text-primary: #b6b6b6;
-    --text-secondary: #ececec;
-    --bg-primary: #513e5c;
-    --bg-secondary: #141418;
-    --transition-speed: 600ms;
-} 
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins" , sans-serif;
+}
 
-body{
-    color: black;
+body {
     background-color: #f6f6f6;
-    margin: 0;
-    padding: 0;
+}
+.sidebar{
+  position: fixed;
+  margin: 6px;
+  height: 96%;
+  width: 78px;
+  background: #513E5C;
+  padding: 6px 14px;
+  z-index: 99;
+  transition: all 0.5s ease;
+  border-radius: 18px;
 }
 
-body::-webkit-scrollbar{
-    width: 0.25rem;
-}
-
-body::-webkit-scrollbar-track{
-    background-color: #1e1e24;
-}
-
-body::-webkit-scrollbar-thumb{
-    background-color: #6649b8;
-}
-
-.navbar{
-    position: fixed;
-    background-color: var(--bg-primary);
-    transition: 200ms ease;
-}
-
-.navbar-nav{
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    height: 100%;
-}
-
-.nav-item{
-    width: 100%;
-}
-
-.nav-item:last-child{
-    margin-top: auto;
-}
-
-.nav-link{
-    display: flex;
-    align-items: center;
-    height: 5rem;
-    color: var(--text-primary);
-    text-decoration: none;
-    filter:  grayscale(100%) opacity(0.7);
-    transition: var(--transition-speed);
-}
-
-.nav-link:hover{
-    filter: grayscale(0%) opacity(1);
-    background: var(--bg-secondary);
-    color: var(--text-secondary);
-}
-
-.link-text{
-    display: none;
-    margin-left: 1rem;
-}
-
-.nav-link .iconify{
-    color: white;
-    min-width: 2rem;
-    width: 2rem;
-    height: 2rem;
-    margin: 0 1.5rem;
-    transition: var(--transition-speed);
-}
-
-img{
-    min-width: 3rem;
-    width: 3rem;
-}
-
-
-.logo {
-  font-weight:300;
-  text-transform: uppercase;
-  margin-bottom: 1rem;
-  text-align: center;
-  color: var(--text-secondary);
-  background: var(--bg-primary);
-  font-size: 1.5rem;
-  letter-spacing: 0.3ch;
-  width: 100%;
+.sidebar .logo-details{
+  height: 60px;
   display: flex;
-  
+  align-items: center;
+  position: relative;
+}
+.sidebar .logo-details .icon{
+  opacity: 0;
+  transition: all 0.5s ease;
+  height: 45px;
+  margin-top: 5px;
+  width: 45px;
+}
+.sidebar .logo-details .logo_name{
+  color: #fff;
+  font-size: 20px;
+  font-weight: 600;
+  opacity: 0;
+  margin-top: 5px;
+  transition: all 0.5s ease;
+}
+
+.sidebar .logo-details #btn{
+  position: absolute;
+  top: 50%;
+  right: 0;
+  transform: translateY(-50%);
+  font-size: 22px;
+  transition: all 0.4s ease;
+  font-size: 23px;
+  text-align: center;
+  cursor: pointer;
+  transition: all 0.5s ease;
+}
+
+.sidebar i{
+  color: #fff;
+  height: 60px;
+  min-width: 50px;
+  font-size: 28px;
+  text-align: center;
+  line-height: 60px;
+}
+
+.sidebar .nav-list{
+  display: flex;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  align-items: center; 
+
+}
+
+.sidebar.open li .tooltip{
+  display: none;
+}
+
+
+.sidebar li a{
+  display: flex;
+  height: 100%;
+  width: 100%;
+  border-radius: 12px;
+  align-items: center;
+  text-decoration: none;
+  transition: all 0.4s ease;
+  background: #11101D;
+  margin-top: 15px;
+}
+
+.sidebar li a:hover{
+  background: #f6f6f6;
+}
+.sidebar li a .links_name{
+  color: #f6f6f6;
+  font-size: 15px;
+  font-weight: 400;
+  white-space: nowrap;
+  opacity: 0;
+  pointer-events: none;
+  transition: 0.4s;
+}
+
+.sidebar li a:hover .links_name,
+.sidebar li a:hover i{
+  transition: all 0.5s ease;
+  color: #11101D;
+}
+.sidebar li i{
+  height: 50px;
+  line-height: 50px;
+  font-size: 20px;
+  border-radius: 12px;
+}
+
+
+.home-section{
+  display: flex;
+  flex-flow: wrap column;
+  margin-top: 10px;
+  margin-left: 60px;
+  background: #f6f6f6;
+  min-height: 100vh;
+  width: calc(100% - 86px);
+  transition: all 0.5s ease;
+  z-index: 2;
+}
+
+.home-section .text{
+  display: inline-block;
+  font-size: 25px;
+  font-weight: bolder;
+  margin-left: 35px;
+}
+
+
+.search-container .input{
+	border: 0;
+	outline: none;
+	color: #8b7d77;
+  background-color: #C4C4C4;
+}
+
+input::placeholder { color: white; }
+
+.search_wrap{
+    margin-left: 50px;
+    display: inline-block;
+}
+
+.search_wrap .search_box{
+	position: relative;
+	width:  600px;
+	height: 50px;
+}
+
+.search_wrap .search_box .input{
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	padding: 10px 20px;
+	border-radius: 3px;
+	font-size: 18px;
+  color: white;
+}
+
+.search_wrap .search_box .btn{
+	position: absolute;
+	top: 5px;
+	margin-right: 8px;
+	width: 53px;
+	height: 79%;
+	background: #fff;
+	z-index: 1;
+	cursor: pointer;
+    border-radius: 10px;
+}
+
+.search_wrap .search_box .btn:hover{
+	background: #C7AABC;	
+}
+
+.search_wrap .search_box .btn.btn_common .fas{
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%,-50%);
+	color: #11101d;
+	font-size: 20px;
+}
+
+.search_wrap.search_wrap_1 .search_box .btn{
+	right: 0;
+    border-radius: 10px;
+}
+
+.search_wrap.search_wrap_1 .search_box .input{
+	padding-right: 80px;
+    border-radius: 13px;
+}
+
+.top-container {
+  display: flex;
+  flex-direction: row;
+}
+
+.time {
+  background-color: #513E5C;
+  height: 50px;
+  padding-top: 6px;
+  margin-left: 20px;
+  border-radius: 13px;
+  width: 180px;
+  text-align: center;
+}
+
+.graph-txt {
+  margin-left: 13px;
+  margin-top: 8px;
+}
+
+.graph-container {
+  display: flex;
   flex-direction: column;
-  justify-content: center;
 }
 
-.logo svg{
-    margin-left: 1.5rem;
-    height: 2rem;
-    width: 2rem;
-    transform: rotate(0deg);
-    transition: var(--transition-speed);
+.rectangle {
+  height: 400px;
+  width: 800px;
+  background-color: #fff;
+  border-radius: 15px;
+  margin-left: 50px;
+  margin-top: 20px;
+  box-shadow: 0 0 5px #513E5C;
 }
 
-main{
-    margin-left: 7rem;
-    padding: 1rem;
-}
-
-.main-container{
-    display: flex;
-    flex-direction: column;
-    margin-top: 1rem;
-}
-
-.graph-one{
-    height: 20rem;
-    width: 100%;
-    background-color: #c7aabc;
-    border-radius: 2rem;
-    margin-bottom: 2rem;
-}
-
-.graph-two{
-    height: 20rem;
-    width: 100%;
-    background-color: #c7aabc;
-    border-radius: 2rem;
+.graph-container .rectangle:last-child{
+  margin-bottom: 40px;
 }
 
 
-/* small screens */
+
+/*For Smol screens */
 @media only screen and (max-width: 600px){
-    .navbar {
+    .sidebar {
         bottom: 0;
-        width: 100vw;
-        height: 5rem;
+        width: 96%;
+        height: 69px;
+        display: flex;
+        flex-flow: row wrap;
     }
 
-    .logo {
+    .sidebar .logo-details,
+    .sidebar .logo-details #btn {
         display: none;
     }
 
-    .navbar-nav {
-        flex-direction: row;
+    .sidebar .nav-list{
+      justify-content: center;
+      height: 50%;
+      width: 100%;
+    }
+    
+    .links_name,
+    .tooltip{
+      display: none;
+    }
+    
+    .sidebar li{
+        height: 50px;
+        margin: 8px 20px;
+        width: 50px;
+        
     }
 
-    .nav-link {
-        justify-content: center;
-    }
 
-    main {
-        margin: 0;
-  }
 }
 
 
 
 /* large screen */
 @media only screen and (min-width: 600px){
-    .navbar {
-        top: 0;
-        width: 5rem;
-        height: 100vh;
+    .sidebar {
+        width: 78px;
+        height: 96%;
     }
 
-    .navbar:hover{
-        width: 17rem;
+    .sidebar.open{
+        width: 220px;
     }
 
-    .navbar:hover .link-text{
-        display: inline;
+    .sidebar.open .logo-details .icon,
+    .sidebar.open .logo-details .logo_name{
+        opacity: 1;
     }
 
-    .navbar:hover .logo svg{
-        transform: rotate(-180deg);
-        
+    .sidebar.open li a .links_name{
+        opacity: 1;
+        pointer-events: auto;
+    }
+    
+    .sidebar.open .logo-details #btn{
+        text-align: right;
     }
 
-    .navbar:hover .logo-text{
-        left: 0px;
+    .sidebar .nav-list{
+      flex-direction: column;  
+      margin-top: 20px;
+      height: 100%;
     }
+
+
+    .sidebar li{
+      height: 50px;
+      margin: 8px 0;
+      width: 100%;
+    }
+
+.sidebar li:last-child{
+    margin: auto;
+}
+
+/* tooltips for large screens */
+.sidebar li .tooltip{
+  position: relative;
+  bottom: 40px;
+  left: calc(100% + 15px);
+  z-index: 3;
+  background: #fff;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+  padding: 6px 12px;
+  border-radius: 4px;
+  font-size: 15px;
+  font-weight: 400;
+  opacity: 0;
+  pointer-events: none;
+  transition: .5s;
+}
+
+.sidebar li:hover .tooltip{
+  opacity: 1;
+  pointer-events: auto;
+  transition: all .4s ease;
+  transform: translateY(-50%);
+}
+
+.sidebar.open li .tooltip{
+  display: none;
+}
 
 }
