--- a/client/ecommerce/ecommerce_styles.css
+++ b/client/ecommerce/ecommerce_styles.css
@@ -307,8 +307,8 @@ input::placeholder { color: white; }
   margin-left: 5%;
 }
 .square {
-  height: 290px;
-  width: 250px;
+  height: 270px;
+  width: 230px;
   background-color: #fff;
   border-radius: 15px;
   margin-left: 50px;
@@ -337,7 +337,8 @@ input::placeholder { color: white; }
 }
 
 h6 {
-  font-size: 20px;
+  font-size: 16px;
+  text-align: center;
 }
 
 button {
@@ -355,19 +356,19 @@ button:hover {
 }
 .bxs-minus-square{
   color: #C7AABC;
-  font-size: 33px;
-  margin-right: 8px;
+  font-size: 30px;
+  margin-right: 7px;
 
 }
 
 .bxs-plus-square{
   color: #C7AABC;
-  font-size: 33px;
-  margin-left: 8px;
+  font-size: 30px;
+  margin-left: 7px;
 }
 
 .price-container {
-  margin-top: 6px;  
+  margin-top: 8px;  
   width: 100%;
   margin-left: auto;
   margin-right: auto;
@@ -376,10 +377,10 @@ button:hover {
 
 .price {
   background-color: #C7AABC;
-  width: 78%;
-  font-size: 18px;
+  width: 73%;
+  font-size: 16px;
   border-radius: 8px;
-  height: 33px;
+  height: 28px;
 }
 
 .price:active {
@@ -393,6 +394,6 @@ button:hover {
 }
 .count {
   border: solid 2px black;
-  width: 50px;
+  width: 40px;
   border-radius: 5px;
 }
