--- a/client/finance/finance_styles.css
+++ b/client/finance/finance_styles.css
@@ -180,6 +180,11 @@ body {
   font-size: 20px;
   border-radius: 12px;
 }
+  
+  #logout{
+    margin-top: 80px;
+  }
+
 .home-section{
   position: relative;
   background: #f6f6f6;
