--- a/client/inventory/inventory_styles.css
+++ b/client/inventory/inventory_styles.css
@@ -12,8 +12,9 @@ body {
 }
 .sidebar{
   position: fixed;
-  margin: 6px;
-  height: 96%;
+  left: 8px;
+  top: 15px;
+  height: 94%;
   width: 78px;
   background: #513E5C;
   padding: 6px 14px;
@@ -22,6 +23,9 @@ body {
   border-radius: 18px;
 }
 
+.sidebar.open{
+  width: 220px;
+}
 .sidebar .logo-details{
   height: 60px;
   display: flex;
@@ -43,7 +47,10 @@ body {
   margin-top: 5px;
   transition: all 0.5s ease;
 }
-
+.sidebar.open .logo-details .icon,
+.sidebar.open .logo-details .logo_name{
+  opacity: 1;
+}
 .sidebar .logo-details #btn{
   position: absolute;
   top: 50%;
@@ -56,7 +63,9 @@ body {
   cursor: pointer;
   transition: all 0.5s ease;
 }
-
+.sidebar.open .logo-details #btn{
+  text-align: right;
+}
 .sidebar i{
   color: #fff;
   height: 60px;
@@ -65,21 +74,74 @@ body {
   text-align: center;
   line-height: 60px;
 }
-
 .sidebar .nav-list{
-  display: flex;
-  list-style: none;
-  padding: 0;
-  margin: 0;
-  align-items: center; 
-
+  margin-top: 20px;
+  height: 100%;
 }
-
+.sidebar li{
+  position: relative;
+  margin: 8px 0;
+  list-style: none;
+}
+.sidebar li .tooltip{
+  position: absolute;
+  top: -20px;
+  left: calc(100% + 15px);
+  z-index: 3;
+  background: #fff;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+  padding: 6px 12px;
+  border-radius: 4px;
+  font-size: 15px;
+  font-weight: 400;
+  opacity: 0;
+  pointer-events: none;
+  transition: 0s;
+}
+.sidebar li:hover .tooltip{
+  opacity: 1;
+  pointer-events: auto;
+  transition: all 0.4s ease;
+  top: 50%;
+  transform: translateY(-50%);
+}
 .sidebar.open li .tooltip{
   display: none;
 }
-
-
+.sidebar input{
+  font-size: 15px;
+  color: #FFF;
+  font-weight: 400;
+  outline: none;
+  height: 50px;
+  width: 100%;
+  width: 50px;
+  border: none;
+  border-radius: 12px;
+  transition: all 0.5s ease;
+  background: #1d1b31;
+}
+.sidebar.open input{
+  padding: 0 20px 0 50px;
+  width: 100%;
+}
+.sidebar .bx-search{
+  position: absolute;
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
+  font-size: 22px;
+  background: #1d1b31;
+  color: #FFF;
+}
+.sidebar.open .bx-search:hover{
+  background: #1d1b31;
+  color: #FFF;
+}
+.sidebar .bx-search:hover{
+  background: #FFF;
+  color: #11101d;
+}
 .sidebar li a{
   display: flex;
   height: 100%;
@@ -91,7 +153,6 @@ body {
   background: #11101D;
   margin-top: 15px;
 }
-
 .sidebar li a:hover{
   background: #f6f6f6;
 }
@@ -104,7 +165,10 @@ body {
   pointer-events: none;
   transition: 0.4s;
 }
-
+.sidebar.open li a .links_name{
+  opacity: 1;
+  pointer-events: auto;
+}
 .sidebar li a:hover .links_name,
 .sidebar li a:hover i{
   transition: all 0.5s ease;
@@ -116,15 +180,17 @@ body {
   font-size: 20px;
   border-radius: 12px;
 }
-
+  
+  #logout{
+    margin-top: 80px;
+  }
 
 .home-section{
-  display: flex;
-  flex-flow: wrap column;
-  margin-top: 10px;
-  margin-left: 60px;
+  position: relative;
   background: #f6f6f6;
   min-height: 100vh;
+  top: 0;
+  left: 86px;
   width: calc(100% - 86px);
   transition: all 0.5s ease;
   z-index: 2;
@@ -133,7 +199,7 @@ body {
 .home-section .text{
   display: inline-block;
   font-size: 25px;
-  font-weight: bolder;
+  font-weight: 500;
   margin-left: 35px;
 }
 
@@ -154,8 +220,8 @@ input::placeholder { color: white; }
 
 .search_wrap .search_box{
 	position: relative;
-	width:  600px;
-	height: 50px;
+	width: 600px;
+	height: 55px;
 }
 
 .search_wrap .search_box .input{
@@ -211,147 +277,57 @@ input::placeholder { color: white; }
 }
 
 .time {
-  background-color: #513E5C;
-  height: 50px;
+  background-color: #C4C4C4;
+  height: 54px;
+  margin-top: 2px;
   padding-top: 6px;
-  margin-left: 20px;
+  margin-left: 40px;
   border-radius: 13px;
   width: 180px;
   text-align: center;
 }
+.total-sales {
+  background-color: #C7AABC;
+  margin-left: 49px;
+  padding-left: 10px;
+  padding-top: 15px;
+  border-radius: 14px;
+  width: 310px;
+  height: 55px;
+}
+.total {
+  color: white;
+  font-size: 18px;
+}
+.sales-container {
+  display: flex;
+  flex-direction: row;
+  margin-top: 12px;
+}
+.square {
+  height: 220px;
+  width: 360px;
+  background-color: #fff;
+  border-radius: 15px;
+  margin-left: 50px;
+  box-shadow: 0 0 5px #513E5C;
+}
 
-.graph-txt {
+.sales-txt {
   margin-left: 13px;
   margin-top: 8px;
 }
 
-.graph-container {
+.finance-container {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
 }
 
 .rectangle {
-  height: 400px;
-  width: 800px;
+  height: 350px;
+  width: 565px;
   background-color: #fff;
   border-radius: 15px;
   margin-left: 50px;
-  margin-top: 20px;
   box-shadow: 0 0 5px #513E5C;
-}
-
-.graph-container .rectangle:last-child{
-  margin-bottom: 40px;
-}
-
-
-
-/*For Smol screens */
-@media only screen and (max-width: 600px){
-    .sidebar {
-        bottom: 0;
-        width: 96%;
-        height: 69px;
-        display: flex;
-        flex-flow: row wrap;
-    }
-
-    .sidebar .logo-details,
-    .sidebar .logo-details #btn {
-        display: none;
-    }
-
-    .sidebar .nav-list{
-      justify-content: center;
-      height: 50%;
-      width: 100%;
-    }
-    
-    .links_name,
-    .tooltip{
-      display: none;
-    }
-    
-    .sidebar li{
-        height: 50px;
-        margin: 8px 20px;
-        width: 50px;
-        
-    }
-
-
-}
-
-
-
-/* large screen */
-@media only screen and (min-width: 600px){
-    .sidebar {
-        width: 78px;
-        height: 96%;
-    }
-
-    .sidebar.open{
-        width: 220px;
-    }
-
-    .sidebar.open .logo-details .icon,
-    .sidebar.open .logo-details .logo_name{
-        opacity: 1;
-    }
-
-    .sidebar.open li a .links_name{
-        opacity: 1;
-        pointer-events: auto;
-    }
-    
-    .sidebar.open .logo-details #btn{
-        text-align: right;
-    }
-
-    .sidebar .nav-list{
-      flex-direction: column;  
-      margin-top: 20px;
-      height: 100%;
-    }
-
-
-    .sidebar li{
-      height: 50px;
-      margin: 8px 0;
-      width: 100%;
-    }
-
-.sidebar li:last-child{
-    margin: auto;
-}
-
-/* tooltips for large screens */
-.sidebar li .tooltip{
-  position: relative;
-  bottom: 40px;
-  left: calc(100% + 15px);
-  z-index: 3;
-  background: #fff;
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
-  padding: 6px 12px;
-  border-radius: 4px;
-  font-size: 15px;
-  font-weight: 400;
-  opacity: 0;
-  pointer-events: none;
-  transition: .5s;
-}
-
-.sidebar li:hover .tooltip{
-  opacity: 1;
-  pointer-events: auto;
-  transition: all .4s ease;
-  transform: translateY(-50%);
-}
-
-.sidebar.open li .tooltip{
-  display: none;
-}
-
 }
