sidebar navigation buttons and page title revision

--- a/client/dashboard/dashboard_styles.css
+++ b/client/dashboard/dashboard_styles.css
@@ -22,6 +22,10 @@ body {
   border-radius: 18px;
 }
 
+.sidebar .active-page {
+  background-color: #8b7d77;
+}
+
 .sidebar .logo-details{
   height: 60px;
   display: flex;
