--- a/client/ecommerce/ecommerce_styles.css
+++ b/client/ecommerce/ecommerce_styles.css
@@ -22,6 +22,9 @@ body {
   transition: all 0.5s ease;
   border-radius: 18px;
 }
+.sidebar .active-page {
+  background-color: #8b7d77;
+}
 
 .sidebar.open{
   width: 220px;
