--- a/client/finance/finance_styles.css
+++ b/client/finance/finance_styles.css
@@ -129,23 +129,7 @@ body {
   padding: 0 20px 0 50px;
   width: 100%;
 }
-.sidebar .bx-search{
-  position: absolute;
-  top: 50%;
-  left: 0;
-  transform: translateY(-50%);
-  font-size: 22px;
-  background: #1d1b31;
-  color: #FFF;
-}
-.sidebar.open .bx-search:hover{
-  background: #1d1b31;
-  color: #FFF;
-}
-.sidebar .bx-search:hover{
-  background: #FFF;
-  color: #11101d;
-}
+
 .sidebar li a{
   display: flex;
   height: 100%;
@@ -185,10 +169,6 @@ body {
   border-radius: 12px;
 }
 
-#logout{
-  margin-top: 80px;
-}
-
 .home-section{
   position: relative;
   background: #f6f6f6;
@@ -207,7 +187,6 @@ body {
   margin-left: 35px;
 }
 
-
 .search-container .input{
 	border: 0;
 	outline: none;
@@ -218,14 +197,14 @@ body {
 input::placeholder { color: white; }
 
 .search_wrap{
-    margin-left: 50px;
+    margin-left: 30px;
     display: inline-block;
 }
 
 .search_wrap .search_box{
 	position: relative;
-	width: 600px;
-	height: 55px;
+	width: 720px;
+	height: 50px;
 }
 
 .search_wrap .search_box .input{
@@ -249,7 +228,7 @@ input::placeholder { color: white; }
 	background: #fff;
 	z-index: 1;
 	cursor: pointer;
-    border-radius: 10px;
+  border-radius: 10px;
 }
 
 .search_wrap .search_box .btn:hover{
@@ -267,7 +246,7 @@ input::placeholder { color: white; }
 
 .search_wrap.search_wrap_1 .search_box .btn{
 	right: 0;
-    border-radius: 10px;
+  border-radius: 10px;
 }
 
 .search_wrap.search_wrap_1 .search_box .input{
@@ -275,67 +254,85 @@ input::placeholder { color: white; }
     border-radius: 13px;
 }
 
+
+
 .top-container {
   display: flex;
   flex-direction: row;
 }
 
-.time {
-  background-color: #C4C4C4;
-  height: 54px;
-  margin-top: 2px;
-  padding-top: 6px;
-  margin-left: 40px;
-  border-radius: 13px;
-  width: 180px;
-  text-align: center;
-}
 .total-sales {
-  background-color: #C7AABC;
-  margin-left: 49px;
+  background-color: #513E5C;
+  margin-top: 2px;
+  margin-left: 55px;
   padding-left: 10px;
-  padding-top: 15px;
-  border-radius: 14px;
-  width: 310px;
-  height: 55px;
+  padding-top: 10px;
+  border-radius: 10px;
+  width: 400px;
+  height: 47px;
 }
 .total {
   color: white;
   font-size: 18px;
+  text-align: center;
 }
 .sales-container {
   display: flex;
   flex-direction: row;
-  margin-top: 12px;
+  margin-left: 30px;
 }
 .square {
-  height: 220px;
-  width: 360px;
+  height: 250px;
+  width: 350px;
   background-color: #fff;
   border-radius: 15px;
-  margin-left: 50px;
   box-shadow: 0 0 5px #513E5C;
 }
-
+.sales-right {
+  margin-left: 15px;
+}
 .sales-txt {
   margin-left: 13px;
-  margin-top: 8px;
+  color: #513E5C;
+  padding-top: 5px;
+  font-size: 15px;
+}
+
+.sales-graph {
+  margin-top: 35px;
+  padding-left: 10px;
+  padding-right: 13px;
+  padding-bottom: 10px;
 }
 
 .finance-container {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
+  margin-left: 5px;
 }
 
-.rectangle {
-  height: 320px;
-  width: 565px;
+.right-rectangle {
+  height: 525px;
+  width: 510px;
   background-color: #fff;
   border-radius: 15px;
-  margin-left: 50px;
+  margin-left: 20px;
   box-shadow: 0 0 5px #513E5C;
 }
 
 .sidebar .active-page {
   background-color: #8b7d77;
+}
+
+.main-container {
+  margin-top: 15px;
+  display: flex;
+  flex-direction: row;
+}
+
+.chart-container {
+  display: flex;
+  flex-direction: row;
+  margin-left: auto;
+  margin-right: auto;
 }
