--- a/client/dashboard/dashboard_styles.css
+++ b/client/dashboard/dashboard_styles.css
@@ -204,109 +204,159 @@ body {
   z-index: 2;
 }
 
-.home-section .text{
+.main-container{
+  margin: 15px 0 0 15px;
+  width: 930px;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+.first-row{
+  margin-bottom: 30px;
+}
+
+.title{
   display: inline-block;
-  font-size: 25px;
-  font-weight: 500;
-  margin-left: 35px;
+  font-weight:bolder;
+  margin-bottom: 8px;
 }
 
-
-
-.search-container .input{
-	border: 0;
-	outline: none;
-	color: #8b7d77;
-  background-color: #C4C4C4;
-}
-
-input::placeholder { color: white; }
-
-.search_wrap{
-    margin-left: 50px;
-    display: inline-block;
-}
-
-.search_wrap .search_box{
-	position: relative;
-	width: 790px;
-	height: 55px;
-}
-
-.search_wrap .search_box .input{
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	padding: 10px 20px;
-	border-radius: 3px;
-	font-size: 18px;
-  color: white;
-}
-
-.search_wrap .search_box .btn{
-	position: absolute;
-	top: 5px;
-	margin-right: 8px;
-	width: 53px;
-	height: 79%;
-	background: #fff;
-	z-index: 1;
-	cursor: pointer;
-    border-radius: 10px;
-}
-
-.search_wrap .search_box .btn:hover{
-	background: #C7AABC;	
-}
-
-.search_wrap .search_box .btn.btn_common .fas{
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%,-50%);
-	color: #11101d;
-	font-size: 20px;
-}
-
-.search_wrap.search_wrap_1 .search_box .btn{
-	right: 0;
-    border-radius: 10px;
-}
-
-.search_wrap.search_wrap_1 .search_box .input{
-	padding-right: 80px;
-    border-radius: 13px;
-}
-
-.top-container {
+.sales-activity{
+  background-color: #fff;
+  list-style: none;
+  height: 200px;
+  padding: 0;
+  margin: 0;
   display: flex;
   flex-direction: row;
-  margin-left: 3%;
-
+  justify-content: space-around;
+  align-items: center;
 }
 
-.time {
-  background-color: #C4C4C4;
-  height: 54px;
-  margin-top: 2px;
-  padding-top: 6px;
-  margin-left: 40px;
-  border-radius: 13px;
-  width: 180px;
-  text-align: center;
+.sales-info{
+  background-color: #c7aabc;
+  color: #513E5C;
+  border-radius: 10px;
+  width: 150px;
+  height: 150px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
-.total-sales {
-  background-color: #C7AABC;
-  margin-left: 49px;
-  padding-left: 10px;
-  padding-top: 15px;
-  border-radius: 14px;
-  width: 310px;
-  height: 55px;
+
+.sales-info i{
+  font-size: 28px;
 }
-.total {
-  color: white;
-  font-size: 18px;
+
+.info-name{
+  margin: 5px 0;
 }
+
+.info-number{
+  font-size: 30px;
+  font-weight: 600;
+  color:#fff;
+}
+
+.second-row{
+  display: flex;
+  flex-direction: row;
+}
+
+.inventory-container{
+  margin-right: 10px;
+}
+
+.inventory-summary{
+  background-color: #fff;
+  list-style: none;
+  height: 200px;
+  width: 360px;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.inv-info{
+  background-color: #c4c4c4;
+  color: #513E5C;
+  border-radius: 10px;
+  width: 300px;
+  height: 50px;
+  display: flex;
+  
+  align-items: center;
+}
+
+.inv-name{
+  margin-left: 10px;
+  width: 220px;
+  
+}
+
+.inv-number{
+  padding-left: 18px;
+  border-left: solid 3px #513E5C;
+  font-weight: 500;
+}
+
+.product-container{
+  display: flex;
+  flex-direction: row;
+  background-color: #fff;
+}
+
+.product-details{
+  list-style: none;
+  height: 200px;
+  width: 360px;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.prod-info{
+  background-color: #c4c4c4;
+  color: #513E5C;
+  border-radius: 10px;
+  width: 300px;
+  height: 50px;
+  display: flex;
+  
+  align-items: center;
+}
+
+.prod-name{
+  margin-left: 10px;
+  width: 220px;
+  
+}
+
+.prod-number{
+  padding-left: 18px;
+  border-left: solid 3px #513E5C;
+  font-weight: 500;
+}
+
+.small-graph{
+  margin-top:47px;
+  background-color: #513E5C;
+  color: #fff;
+  border-radius: 10px;
+  width: 200px;
+  height: 180px;
+  display: flex;
+}
+
+.small-graph h5{
+  margin: 4px 0 0 10px;
+}
+
