--- a/client/ecommerce/ecommerce_styles.css
+++ b/client/ecommerce/ecommerce_styles.css
@@ -222,14 +222,14 @@ input::placeholder {
 }
 
 .search_wrap {
-  margin-left: 50px;
+  margin: auto;
   display: inline-block;
 }
 
 .search_wrap .search_box {
   position: relative;
   width: 790px;
-  height: 55px;
+  height: 50px;
 }
 
 .search_wrap .search_box .input {
@@ -285,55 +285,37 @@ input::placeholder {
   margin-left: 3%;
 }
 
-.time {
-  background-color: #c4c4c4;
-  height: 54px;
-  margin-top: 2px;
-  padding-top: 6px;
-  margin-left: 40px;
-  border-radius: 13px;
-  width: 180px;
-  text-align: center;
-}
-.total-sales {
-  background-color: #c7aabc;
-  margin-left: 49px;
-  padding-left: 10px;
-  padding-top: 15px;
-  border-radius: 14px;
-  width: 310px;
-  height: 55px;
-}
-.total {
-  color: white;
-  font-size: 18px;
+.main-container {
+  margin-top: 20px;
 }
 .product-container {
-  padding: 40px;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-gap: 25px;
+  grid-gap: 20px;
 }
 
 .square {
-  height: 270px;
-  width: 230px;
+  height: 155px;
+  width: 240px;
   background-color: #fff;
   border-radius: 15px;
-  margin-left: 50px;
+  margin-left: 40px;
   box-shadow: 0 0 5px #513e5c;
   display: flex;
   flex-direction: column;
 }
 
 .image-container {
-  margin-top: 15px;
+  margin-top: 12px;
   margin-left: auto;
   margin-right: auto;
-  width: 85%;
-  height: 63%;
+  width: 89%;
+  height: 39%;
   background-color: #513e5c;
-  border-radius: 14px;
+  border-radius: 12px;
+  text-align: center;
+  color: white;
+  padding: 6px 8px 6px 8px;
 }
 
 .amount-container {
@@ -371,16 +353,24 @@ button:hover {
 }
 
 .price-container {
-  margin-top: 8px;
+  margin-top: 9px;
   width: 100%;
   margin-left: auto;
   margin-right: auto;
   text-align: center;
+  display: flex;
+  flex-direction: row;
 }
 
+.price-tag {
+  margin: auto;
+  padding-left: 5px;
+  font-weight: bold;
+}
 .price {
+  margin: auto;
   background-color: #c7aabc;
-  width: 73%;
+  width: 50%;
   font-size: 16px;
   border-radius: 8px;
   height: 28px;
@@ -389,6 +379,7 @@ button:hover {
 .price:active {
   background-color: #513e5c;
   color: white;
+  transform: scale(0.95);
 }
 
 .price:hover {
@@ -406,8 +397,17 @@ button:hover {
 
 #pageNumber {
   display: flex;
+  float: right;
+  margin-right: 5%;
+  margin-top: 20px;
 }
 
 #description {
   text-transform: capitalize;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
