--- a/client/finance/finance_styles.css
+++ b/client/finance/finance_styles.css
@@ -259,6 +259,9 @@ input::placeholder { color: white; }
 .top-container {
   display: flex;
   flex-direction: row;
+  margin-left: 10px;
+  margin-top: 10px;
+
 }
 
 .total-sales {
@@ -325,9 +328,10 @@ input::placeholder { color: white; }
 }
 
 .main-container {
-  margin-top: 15px;
+  margin-top: 30px;
   display: flex;
   flex-direction: row;
+  margin-left: 10px;
 }
 
 .chart-container {
