--- a/client/user/user_styles.css
+++ b/client/user/user_styles.css
@@ -188,10 +188,6 @@ body {
   border-radius: 12px;
 }
 
-#logout {
-  margin-top: 80px;
-}
-
 .home-section {
   position: relative;
   background: #f6f6f6;
@@ -311,4 +307,49 @@ input::placeholder {
 
 #description {
   text-transform: capitalize;
+}
+
+.main-container {
+  margin-top: 20px;
+  margin-left: 3%;
+
+}
+
+.profile-container {
+  margin-left: 50px;
+  display: flex;
+  flex-direction: row;
+  background-color: white;
+  width: 900px;
+  border-radius: 10px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+.purchase-container {
+  margin-left: 50px;
+  border-radius: 10px;
+  background-color: white;
+  width: 900px;
+  padding-left: 20px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
+.left-profile {
+  margin: auto;
+}
+.right-profile {
+  margin: auto;
+}
+#purchase_table {
+  margin-left: 50px;
+  margin-top: 10px;
+}
+
+.profile-container h3 {
+  font-size: 18px;
+}
+
+td {
+  padding: 15px;
 }
