--- a/client/dashboard/dashboard_styles.css
+++ b/client/dashboard/dashboard_styles.css
@@ -200,6 +200,7 @@ body {
   z-index: 2;
   display: flex;
   flex-direction: row;
+  margin-top: 35px;
 }
 
 .main-container{
@@ -215,9 +216,17 @@ body {
 }
 
 .title{
-  display: inline-block;
   font-weight:bolder;
   margin-bottom: 8px;
+  background-color: #513E5C;
+  color: #fff;
+  width: 230px;
+  height: 40px;
+  border-radius: 10px;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .sales-activity{
@@ -269,6 +278,7 @@ body {
   display: flex;
   flex-direction: row;
   width: 880px;
+  margin-top: 40px;
 }
 
 .inventory-container{
@@ -360,9 +370,9 @@ body {
   color: #fff;
   border-radius: 10px;
   width: 200px;
-  height: 180px;
+  height: 190px;
   display: flex;
-   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
 }
 
 .small-graph h5{
@@ -370,5 +380,5 @@ body {
 }
 
 .calendar{
-  margin: 55px 0 0 18px;
+  margin: 80px 0 0 10px;
 }
