--- a/client/user/user_styles.css
+++ b/client/user/user_styles.css
@@ -206,8 +206,7 @@ body {
   margin-left: 35px;
 }
 
-
-.user-container{
+.user-container {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -259,10 +258,9 @@ body {
 
 .main-container {
   margin-top: 30px;
-  position:static;
-  top:50px;
+  position: static;
+  top: 50px;
   left: 400px;
-
 }
 
 .profile-container {
@@ -313,3 +311,6 @@ td {
   padding: 15px;
 }
 
+#description {
+  text-transform: capitalize;
+}
